--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Mice Pápai CV",
   "main": "build/build.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build-pug && npm run build-css && npm run build-css-min",
+    "build-pug": "node build/build.js",
+    "watch-pug": "nodemon -e index.pug -x \"npm run build-pug\"",
+    "build-css": "node-sass --include-path css --output-style expanded css/q.scss css/q.css",
+    "build-css-min": "node-sass --include-path css --output-style compressed --source-map true css/q.scss css/q.min.css",
+    "watch-css": "nodemon -e css -x \"npm run build-css && npm run build-css-min\"",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -15,5 +21,19 @@
   ],
   "author": "Mice Pápai",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/botlik/cv#readme"
+  "homepage": "https://bitbucket.org/botlik/cv#readme",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "mocha": "^5.1.1",
+    "nodemon": "^1.17.3",
+    "nyc": "^11.7.1",
+    "pug": "^2.0.3",
+    "sass": "^1.3.2"
+  }
 }
