--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "mocha": "^5.1.1",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.17.3",
     "nyc": "^11.7.1",
     "pug": "^2.0.3",
