--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
   "name": "mice-papai-cv",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Mice Pápai CV",
   "main": "build/build.js",
   "scripts": {
-    "build": "npm run build-pug && npm run build-css && npm run build-css-min",
-    "build-pug": "node build/build.js",
-    "watch-pug": "nodemon -e pug/* -x \"npm run build-pug\"",
-    "build-css": "node-sass --include-path css --output-style expanded css/src/q.scss css/q.css",
-    "build-css-min": "node-sass --include-path css --output-style compressed --source-map true css/src/q.scss css/q.min.css",
-    "watch-css": "nodemon -e css/src -x \"npm run build-css && npm run build-css-min\"",
-    "test": "mocha"
+    "build": "npm run pug:build && npm run css:build",
+    "pug:watch": "nodemon -e pug/* -x \"npm run pug:build\"",
+    "pug:build": "node build/build.js",
+    "css:test": "sass --check css/src/q.scss",
+    "css:build": "sass --style compressed css/src/q.scss css/q.min.css",
+    "css:watch": "sass --style compressed --watch css/src/q.scss:css/q.min.css",
+    "test": "npm run css:test "
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://botlik@bitbucket.org/botlik/cv.git"
+  "hooks": {
+    "pre-commit": "npm run test"
   },
+  "repository": "github:qwhex/qwhex.github.io",
   "keywords": [
-    "cv"
+    "cv",
+    "qwhex",
+    "mice papai",
+    "micemusculus",
+    "spa"
   ],
   "author": "Mice Pápai",
   "license": "ISC",
   "homepage": "https://qwhex.github.io",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "mocha": "^5.1.1",
-    "node-sass": "^4.9.3",
-    "nodemon": "^1.17.3",
-    "nyc": "^11.7.1",
+    "chai": "^4.2.0",
+    "eslint": "^5.6.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.1.1",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.4",
+    "nyc": "^13.0.1",
     "pug": "^2.0.3",
-    "sass": "^1.3.2"
+    "sass": "^1.14.1"
   }
 }
