--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "mice-papai-cv",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Mice Pápai CV",
   "main": "build/build.js",
   "scripts": {
-    "build": "npm run pug:build && npm run css:build",
-    "pug:watch": "nodemon -e pug/* -x \"npm run pug:build\"",
+    "build": "npm run pug:build && npm run sass:build",
+    "lint": "npm run js:lint && npm run sass:lint",
+    "pug:watch": "nodemon -e pug --watch pug \"npm run pug:build\"",
     "pug:build": "node build/build.js",
-    "css:test": "sass --check css/src/q.scss",
-    "css:build": "sass --style compressed css/src/q.scss css/q.min.css",
-    "css:watch": "sass --style compressed --watch css/src/q.scss:css/q.min.css",
-    "test": "npm run css:test "
+    "sass:watch": "sass --style compressed --watch css/src/q.scss:css/q.min.css",
+    "sass:build": "sass --style compressed css/src/q.scss css/q.min.css",
+    "sass:lint": "sass css/src/q.scss > /dev/null",
+    "js:lint": "eslint js build"
   },
   "hooks": {
-    "pre-commit": "npm run test"
+    "pre-commit": "npm run lint"
   },
   "repository": "github:qwhex/qwhex.github.io",
   "keywords": [
@@ -27,18 +28,19 @@
   "license": "ISC",
   "homepage": "https://qwhex.github.io",
   "devDependencies": {
+    "acorn": "^6.1.1",
     "chai": "^4.2.0",
-    "eslint": "^5.6.0",
+    "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^1.1.1",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.4",
-    "nyc": "^13.0.1",
-    "pug": "^2.0.3",
-    "sass": "^1.14.1"
+    "husky": "^2.7.0",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1",
+    "pug": "^2.0.4",
+    "sass": "^1.22.2"
   }
 }
