--- a/package.json
+++ b/package.json
@@ -1,46 +1,50 @@
 {
   "name": "mice-papai-cv",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Mice Pápai CV",
   "main": "build/build.js",
   "scripts": {
-    "build": "npm run pug:build && npm run sass:build",
-    "lint": "npm run js:lint && npm run sass:lint",
+    "build": "npm run lint && npm run pug:build && npm run sass:build",
+    "lint": "npm run lint-js && npm run lint-sass",
+    "lint-js": "prettier --no-editorconfig --check \"**/*\" && eslint .",
+    "lint-sass": "sass css/src/q.scss > /dev/null",
+    "prettier": "prettier --no-editorconfig --write \"**/*\"",
     "pug:watch": "nodemon -e pug --watch pug \"npm run pug:build\"",
     "pug:build": "node build/build.js",
     "sass:watch": "sass --style compressed --watch css/src/q.scss:css/q.min.css",
-    "sass:build": "sass --style compressed css/src/q.scss css/q.min.css",
-    "sass:lint": "sass css/src/q.scss > /dev/null",
-    "js:lint": "eslint js build"
+    "sass:build": "sass --style compressed css/src/q.scss css/q.min.css"
+  },
+  "engines": {
+    "node": "^12.13.0"
   },
   "hooks": {
-    "pre-commit": "npm run lint"
+    "pre-commit": "pretty-quick --staged && npm run lint"
   },
   "repository": "github:qwhex/qwhex.github.io",
   "keywords": [
     "cv",
-    "qwhex",
     "mice papai",
-    "micemusculus",
-    "spa"
+    "qwhex"
   ],
   "author": "Mice Pápai",
   "license": "ISC",
   "homepage": "https://qwhex.github.io",
   "devDependencies": {
-    "acorn": "^6.1.1",
+    "acorn": "^7.1.0",
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-node": "^8.0.1",
+    "eslint": "^6.7.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "husky": "^2.7.0",
-    "mocha": "^6.1.4",
-    "nodemon": "^1.19.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^3.1.0",
+    "mocha": "^6.2.2",
+    "nodemon": "^2.0.1",
     "nyc": "^14.1.1",
     "pug": "^2.0.4",
-    "sass": "^1.22.2"
+    "sass": "^1.23.7",
+    "prettier": "1.19.1",
+    "pretty-quick": "^2.0.0"
   }
 }
