--- a/package.json
+++ b/package.json
@@ -1,50 +1,45 @@
 {
   "name": "mice-papai-cv",
-  "version": "1.4.0",
+  "version": "2021.1.16",
   "description": "Mice Pápai CV",
-  "main": "build/build.js",
+  "main": "build.js",
   "scripts": {
-    "build": "npm run lint && npm run pug:build && npm run sass:build",
-    "lint": "npm run lint-js && npm run lint-sass",
-    "lint-js": "prettier --no-editorconfig --check \"**/*\" && eslint .",
-    "lint-sass": "sass css/src/q.scss > /dev/null",
+    "watch": "concurrently \"yarn pug:watch\" \"yarn sass:watch\" \"http-server -a 127.0.0.1\"",
+    "build": "yarn pug:build && yarn sass:build",
+    "lint": "yarn js:lint && yarn sass:lint",
     "prettier": "prettier --no-editorconfig --write \"**/*\"",
-    "pug:watch": "nodemon -e pug --watch pug \"npm run pug:build\"",
-    "pug:build": "node build/build.js",
+    "js:lint": "prettier --no-editorconfig --check \"**/*\" && eslint .",
+    "pug:watch": "nodemon -e pug --watch pug \"yarn pug:build\"",
+    "pug:build": "node build.js",
     "sass:watch": "sass --style compressed --watch css/src/q.scss:css/q.min.css",
-    "sass:build": "sass --style compressed css/src/q.scss css/q.min.css"
+    "sass:build": "sass --style compressed css/src/q.scss css/q.min.css",
+    "sass:lint": "sass css/src/q.scss > /dev/null"
   },
   "engines": {
     "node": "^12.13.0"
   },
   "hooks": {
-    "pre-commit": "pretty-quick --staged && npm run lint"
+    "pre-commit": "pretty-quick --staged",
+    "pre-push": "npm run lint"
   },
   "repository": "github:qwhex/qwhex.github.io",
-  "keywords": [
-    "cv",
-    "mice papai",
-    "qwhex"
-  ],
   "author": "Mice Pápai",
   "license": "ISC",
   "homepage": "https://qwhex.github.io",
   "devDependencies": {
-    "acorn": "^7.1.1",
-    "chai": "^4.2.0",
+    "concurrently": "^5.3.0",
     "eslint": "^6.7.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "husky": "^3.1.0",
-    "mocha": "^6.2.2",
-    "nodemon": "^2.0.1",
-    "nyc": "^14.1.1",
+    "http-server": "^0.12.3",
+    "husky": "^4.3.8",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "pug": "^2.0.4",
-    "sass": "^1.23.7",
-    "prettier": "1.19.1",
-    "pretty-quick": "^2.0.0"
+    "sass": "^1.23.7"
   }
 }
